[tool.poetry]
name = "my-bot"
version = "0.1.0"
description = "A Telegram bot"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
telethon = "1.28.0"
python-telegram-bot = "20.0"
requests = "2.31.0"
Flask = "2.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
